# twinkl

./: GEMINI.md  README.md  pyproject.toml
config/: synthetic_data.yaml
docs/: PRD.md
docs/Ideas/: A3D.md  Feat_vif.md  Musings.md  Synthetic_data.md  VIF_01_Concepts_and_Roadmap.md  VIF_02_System_Architecture.md  VIF_03_Model_Training.md  VIF_04_Uncertainty_Logic.md  VIF_Example.md
docs/VIF/: VIF_06_Profile_Conditioned_Drift_and_Encoder.md  VIF_System_Architecture_Diagrams.md
notebooks/: journal_gen.ipynb  judge_labeling.ipynb
